dz9: Библиотека с Spring MVC