@@ -9,14 +9,16 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import ru.otus.library.domain.Author;
 import ru.otus.library.domain.Book;
 import ru.otus.library.domain.Genre;
+import ru.otus.library.dto.BookDetailsDto;
 import ru.otus.library.repository.AuthorRepository;
 import ru.otus.library.repository.BookRepository;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertIterableEquals;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -27,90 +29,80 @@ public class BookServiceImplTest {
     @Mock
     private AuthorRepository authorRepo;
 
-    @Mock
-    private IOService ioService;
-
     @InjectMocks
     private BookServiceImpl service;
 
     @Test
     void testListAllBooks() {
-        List<Book> books = Arrays.asList(
+        List<Book> expectedBooks = Arrays.asList(
                 new Book("-1", "test book 1", 1945),
                 new Book("-2", "test book 2", 1950));
-        doReturn(books).when(bookRepo).findAll();
-        service.listAllBooks();
-        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
-        verify(ioService, times(3)).outputLine(captor.capture());
-        List<String> output = captor.getAllValues();
-        assertEquals(output.get(0), "Listing all books:");
-        assertEquals(output.get(1), service.getBookShortString(books.get(0)));
-        assertEquals(output.get(2), service.getBookShortString(books.get(1)));
+        doReturn(expectedBooks).when(bookRepo).findAll();
+        List<Book> actualBooks = service.listAllBooks();
+        assertIterableEquals(expectedBooks, actualBooks);
     }
 
     @Test
     void testGetBookDetails() {
-        List<Genre> genres = Collections.singletonList(new Genre("-1", "test genre"));
+        List<Genre> genres = List.of(
+                new Genre("-1", "test genre 1"),
+                new Genre("-2", "test genre 2"));
         Author author = new Author("-1", "test author", null);
         Book book = new Book("-1", "test book", 1945, genres, author);
-        doReturn(book).when(bookRepo).getById(anyString());
-        service.getBookDetails("-1");
-        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
-        verify(ioService, times(2)).outputLine(captor.capture());
-        List<String> output = captor.getAllValues();
-        assertEquals(output.get(0), "Book details:");
-        assertEquals(output.get(1), service.getBookLongString(book));
+        doReturn(Optional.of(book)).when(bookRepo).findById(anyString());
+        BookDetailsDto expectedBookDetails = new BookDetailsDto("-1", "test book", "test author",
+                "test genre 1, test genre 2", 1945);
+        BookDetailsDto actualBookDetails = service.getBookDetails("-1");
+        assertEquals(expectedBookDetails, actualBookDetails);
     }
 
     @Test
     void testAddNewBook() {
-        List<Genre> genres = Collections.singletonList(new Genre("-1", "test genre"));
+        List<Genre> genres = List.of(
+                new Genre(null, "test genre 1"),
+                new Genre(null, "test genre 2"));
         Author author = new Author("-1", "test author", null);
         Book book = new Book("-1", "test book", 1945, genres, author);
 
-        doReturn(book.getName(), author.getName(), genres.get(0).getName())
-                .when(ioService).inputLine();
-        doReturn(book.getReleaseYear())
-                .when(ioService).inputInteger();
-        doReturn(author)
+        doReturn(Optional.of(author))
                 .when(authorRepo).findByName(anyString());
 
         doReturn(book).when(bookRepo).save(any(Book.class));
-        service.addNewBook();
-        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
-        verify(ioService, times(2)).outputLine(captor.capture());
-        List<String> output = captor.getAllValues();
-        assertEquals("inserted book", output.get(0));
-        assertEquals(service.getBookLongString(book), output.get(1));
+
+        BookDetailsDto bookDetails = new BookDetailsDto(null, "test book", "test author",
+                "test genre 1, test genre 2", 1945);
+        String id = service.addNewBook(bookDetails);
+        assertEquals("-1", id);
+    }
+
+    @Test
+    void testEditBook() {
+        List<Genre> genres = List.of(
+                new Genre(null, "test genre 1"),
+                new Genre(null, "test genre 2"));
+        Author author = new Author("-1", "test author", null);
+        Book book = new Book("-1", "test book", 1945, genres, author);
+        Book bookEdited = new Book("-1", "test book edited", 1946, genres, author);
+
+        doReturn(Optional.of(author))
+                .when(authorRepo).findByName(anyString());
+
+        doReturn(Optional.of(book)).when(bookRepo).findById(anyString());
+
+        BookDetailsDto bookDetails = new BookDetailsDto("-1", "test book edited", "test author",
+                "test genre 1, test genre 2", 1946);
+        service.editBook(bookDetails);
+        ArgumentCaptor<Book> bookCaptor = ArgumentCaptor.forClass(Book.class);
+        verify(bookRepo).save(bookCaptor.capture());
+        assertEquals(bookEdited, bookCaptor.getValue());
     }
 
     @Test
     void testDeleteBook() {
-        doNothing().when(bookRepo).deleteById(anyString());
+        Book book = new Book("-1", "test book", 1945);
+        doReturn(Optional.of(book)).when(bookRepo).findById(anyString());
         service.deleteBook("-1");
-        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
-        verify(ioService).outputLine(captor.capture());
-        assertEquals("deleted book with id -1", captor.getValue());
+        verify(bookRepo).deleteById("-1");
     }
 
-    @Test
-    void testGetBookShortString() {
-        String expected = "1. test book (1965)";
-        Book book = new Book("1", "test book", 1965);
-        assertEquals(expected, service.getBookShortString(book));
-    }
-
-    @Test
-    void testGetBookLongString() {
-        String expected = String.format("1. test book (1965)%n" +
-                "\tAuthor: test author%n" +
-                "\tGenres: test genre 1, test genre 2");
-        Author author = new Author("1", "test author", null);
-        List<Genre> genres = Arrays.asList(
-                new Genre("1", "test genre 1"),
-                new Genre("2", "test genre 2")
-        );
-        Book book = new Book("1", "test book", 1965, genres, author);
-        assertEquals(expected, service.getBookLongString(book));
-    }
 }
